<resources>
    <string name="app_name">Alert Dialog</string>

    <string name="alert_one">One Button Dialog</string>
    <string name="alert_two">Two Button Dialog</string>
    <string name="alert_three">Three Button Dialog</string>
    <string name="alert_four">Four List View</string>
    <string name="alert_five">Chack box Button Dialog</string>
    <string name="alert_six">Radio Dialog</string>
    <string-array name="choices">
        <item>Page1</item>
        <item>Sprite</item>
        <item>Coke</item>
        <item>Save Up</item>
    </string-array>
</resources>
